--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -30,6 +30,7 @@
                 <WpfPlot Grid.Row="1" Name="ChartQComponent" FontFamily="JetBrains Mono"/>
                 <WpfPlot Grid.Row="2" Name="ChartComplexSignal" FontFamily="JetBrains Mono"/>
                 <WpfPlot Grid.Row="3" Name="ChartConvolution" FontFamily="JetBrains Mono"/>
+                <WpfPlot Grid.Row="0" Grid.RowSpan="4" Name="ChartResearch" FontFamily="JetBrains Mono" Visibility="Collapsed" />
             </Grid>
         </GroupBox>
         <StackPanel Grid.Column="1">
@@ -39,13 +40,19 @@
                         <Label>Число бит</Label>
                         <xctk:IntegerUpDown Name="BitsCount" 
                                  TextAlignment="Right" Width="50" Height="25" 
-                                 Minimum="8" Maximum="512" Increment="2" Value="16"/>
+                                 Minimum="8" Maximum="512" Increment="2" Value="8"/>
                     </WrapPanel>
                     <WrapPanel HorizontalAlignment="Right">
                         <Label>Скорость передачи (бит/с)</Label>
                         <xctk:IntegerUpDown Name="BaudRate" 
                                  TextAlignment="Right" Width="50" Height="25" 
                                  Minimum="10" Maximum="1000" Increment="1" Value="500"/>
+                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Right">
+                        <Label>Несущая частота (кГц)</Label>
+                        <xctk:DoubleUpDown Name="CarrierFreq"
+                                TextAlignment="Right" Width="50" Height="25"
+                                Minimum="0.01" Maximum="100" Increment="0.1" Value="0.5"/>
                     </WrapPanel>
                     <WrapPanel HorizontalAlignment="Right">
                         <Label>Частота дискретизации (кГц)</Label>
@@ -58,7 +65,7 @@
                         <Label>Отношение сигнал/шум (дБ)</Label>
                         <xctk:DoubleUpDown Name="SNR"
                                  TextAlignment="Right" Width="50" Height="25"
-                                 Minimum="-30" Maximum="30" Increment=".5" Value="-12"/>
+                                 Minimum="-30" Maximum="30" Increment=".5" Value="10"/>
                     </WrapPanel>
 
                 </StackPanel>
@@ -77,7 +84,46 @@
 
                 </TextBox>
             </GroupBox>
+            <GroupBox Header="Параметры исследования">
+                <StackPanel Height="108">
+                    <WrapPanel HorizontalAlignment="Right">
+                        <Label>Нижняя граница SNR</Label>
+                        <xctk:IntegerUpDown Name="DownBorder" 
+                    TextAlignment="Right" Width="50" Height="25" 
+                    Minimum="-50" Maximum="0" Increment="1" Value="-10"/>
+                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Right">
+                        <Label>Верхняя граница SNR</Label>
+                        <xctk:IntegerUpDown Name="UpBorder" 
+                    TextAlignment="Right" Width="50" Height="25" 
+                    Minimum="0" Maximum="50" Increment="1" Value="10"/>
+                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Right">
+                        <Label>Шаг по SNR</Label>
+                        <xctk:DoubleUpDown Name="Step" 
+                    TextAlignment="Right" Width="50" Height="25" 
+                    Minimum="0" Maximum="50" Increment="0.5" Value="1"/>
+                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Right">
+                        <Label>Число усреднений</Label>
+                        <xctk:IntegerUpDown Name="MeanCount" 
+                    TextAlignment="Right" Width="50" Height="25" 
+                    Minimum="1" Maximum="1000" Increment="1" Value="10"/>
+                    </WrapPanel>
+                </StackPanel>
+            </GroupBox>
             <Button x:Name="GenerateSignals" Content="Смоделировать сигналы" Click="OnClickGenerateSignals"/>
+            <Button x:Name="ConductResearch" Content="Провести исследование" Click="OnClickConductResearch" />
+            <ProgressBar Name="ProgressResearch"
+                Margin="0 5 0 0" Height="25" Visibility="Collapsed"
+                Maximum="1000" />
         </StackPanel>
     </Grid>
+    <Window.Resources>
+        <cm:BackgroundWorker x:Key="BackgroundWorkerConductResearch"
+                 WorkerReportsProgress="True"
+                 DoWork="OnDoWorkBackgroundWorkerConductResearch"
+                 RunWorkerCompleted="OnRunWorkerCompletedBackgroundWorkerConductResearch"
+                 ProgressChanged="OnProgressChangedBackgroundWorkerConductResearch" />
+    </Window.Resources>
 </Window>
